common_src += files(['CInviscidVortexSolution.cpp',
           'CIncTGVSolution.cpp',
           'CMMSIncNSSolution.cpp',
           'CMMSIncEulerSolution.cpp',
           'CRinglebSolution.cpp',
           'CMMSNSTwoHalfSpheresSolution.cpp',
           'CNSUnitQuadSolution.cpp',
           'CMMSNSUnitQuadSolution.cpp',
           'CMMSNSTwoHalfCirclesSolution.cpp',
           'CTGVSolution.cpp',
           'CMMSNSUnitQuadSolutionWallBC.cpp',
           'CVerificationSolution.cpp',
           'CMMSPGDWall.cpp',
           'CUserDefinedSolution.cpp'])
